# GLstuff

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: camera.hpp  shaders.h  utils.h
shaders/: part3.frag  part3.vert  rainbow.vert  texture.frag  texture.vert  yellow.frag  yellow.vert
src/: camera.cpp  main.c  part1.c  part2.c  part2.cpp  part3.cpp  utils.c
